--- a/assets/less/antd-custom.less
+++ b/assets/less/antd-custom.less
@@ -1,4 +1,5 @@
 // @primary-color: #52c41a;
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 @layout-header-height: 40px;
 @border-radius-base: 2px;
